business_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    POINT

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ListInst
Rule 2     ListInst -> Instruction END ListInst
Rule 3     ListInst -> Instruction END
Rule 4     Instruction -> instance
Rule 5     Instruction -> SAVE ID
Rule 6     Instruction -> ID GET METRICS DATE
Rule 7     Instruction -> loop_statements
Rule 8     Instruction -> IfStatement
Rule 9     Instruction -> IfStatement ELSE OBRACE ListInst CBRACE
Rule 10    Instruction -> ID ACTION SALE ID PRICE DPOINT NUMBER AMOUNT DPOINT NUMBER
Rule 11    Instruction -> ID ACTION SALE ID PRICE DPOINT ID AMOUNT DPOINT ID
Rule 12    Instruction -> ID ACTION SALE ID PRICE DPOINT operation AMOUNT DPOINT operation
Rule 13    Instruction -> ID ACTION INVESTS ID COST DPOINT NUMBER AMOUNT DPOINT NUMBER
Rule 14    Instruction -> ID ACTION INVESTS ID COST DPOINT ID AMOUNT DPOINT ID
Rule 15    Instruction -> ID ACTION INVESTS ID COST DPOINT operation AMOUNT DPOINT operation
Rule 16    Instruction -> ID ADD ID
Rule 17    Instruction -> ID ADD BILL OBRACE NUMBER COMMA DESCRIP CBRACE
Rule 18    Instruction -> ID ADD BILL OBRACE operation COMMA DESCRIP CBRACE
Rule 19    Instruction -> ID ADD BILL OBRACE ID COMMA DESCRIP CBRACE
Rule 20    Instruction -> ID ADD subType
Rule 21    Instruction -> ID DEL NAME
Rule 22    Instruction -> ID DEL ID
Rule 23    Instruction -> ID DISMISS NAME
Rule 24    Instruction -> ID DISMISS ID
Rule 25    Instruction -> PRINT DPOINT ID
Rule 26    Instruction -> funct_call
Rule 27    Instruction -> DEF TYPE ID OPAREN Params CPAREN OBRACE ListInst CBRACE
Rule 28    Instruction -> DEF VOID ID OPAREN Params CPAREN OBRACE ListInst CBRACE
Rule 29    Params -> TYPE ID COMMA Params
Rule 30    Params -> TYPE ID
Rule 31    Params -> empty
Rule 32    loop_statements -> FOREACH ID IN ID OBRACE ListInst CBRACE
Rule 33    loop_statements -> WHILE OPAREN condition CPAREN OBRACE ListInst CBRACE
Rule 34    IfStatement -> IF OPAREN condition CPAREN OBRACE ListInst CBRACE
Rule 35    condition -> bool_expression
Rule 36    bool_expression -> NOT bool_expression
Rule 37    bool_expression -> bool_expression AND bool_expression
Rule 38    bool_expression -> bool_expression OR bool_expression
Rule 39    bool_expression -> ID EQUAL ID
Rule 40    bool_expression -> ID LEQ ID
Rule 41    bool_expression -> ID GEQ ID
Rule 42    bool_expression -> ID GREATER ID
Rule 43    bool_expression -> ID LESS ID
Rule 44    bool_expression -> OPAREN bool_expression CPAREN
Rule 45    bool_expression -> ID IN ID
Rule 46    instance -> TYPE ID
Rule 47    instance -> TYPE ID ASSIGN Assignable
Rule 48    instance -> ID ASSIGN Assignable
Rule 49    operation -> operation PLUS operation
Rule 50    operation -> operation MINUS operation
Rule 51    operation -> operation DIV operation
Rule 52    operation -> operation MULT operation
Rule 53    operation -> ID
Rule 54    operation -> NUMBER
Rule 55    operation -> OPAREN operation CPAREN
Rule 56    Assignable -> subType
Rule 57    Assignable -> collection
Rule 58    Assignable -> GET NAME FROM ID
Rule 59    Assignable -> LOAD NAME
Rule 60    Assignable -> operation
Rule 61    Assignable -> funct_call
Rule 62    funct_call -> ID OPAREN Argument CPAREN
Rule 63    Argument -> Assignable COMMA Argument
Rule 64    Argument -> Assignable
Rule 65    funct_call -> empty
Rule 66    Assignable -> GET STAFF FROM ID
Rule 67    Assignable -> GET CATALOG FROM ID
Rule 68    Assignable -> GET AMOUNT FROM ID
Rule 69    Assignable -> ID
Rule 70    subType -> OBRACE bus CBRACE
Rule 71    subType -> OBRACE emp CBRACE
Rule 72    subType -> OBRACE prod CBRACE
Rule 73    collection -> OBR collection_body CBR
Rule 74    collection_body -> subType COMMA collection_body
Rule 75    collection_body -> subType
Rule 76    collection_body -> empty
Rule 77    collection_body -> ID COMMA collection_body
Rule 78    collection_body -> ID
Rule 79    bus -> NAME COMMA collection COMMA collection
Rule 80    bus -> NAME COMMA ID COMMA ID
Rule 81    emp -> NAME COMMA SALARY DPOINT NUMBER
Rule 82    emp -> NAME COMMA SALARY DPOINT ID
Rule 83    emp -> NAME COMMA SALARY DPOINT operation
Rule 84    prod -> NAME COMMA AMOUNT DPOINT NUMBER
Rule 85    prod -> NAME
Rule 86    prod -> NAME COMMA AMOUNT DPOINT ID
Rule 87    prod -> NAME COMMA AMOUNT DPOINT operation
Rule 88    empty -> <empty>

Terminals, with rules where they appear

ACTION               : 10 11 12 13 14 15
ADD                  : 16 17 18 19 20
AMOUNT               : 10 11 12 13 14 15 68 84 86 87
AND                  : 37
ASSIGN               : 47 48
BILL                 : 17 18 19
CATALOG              : 67
CBR                  : 73
CBRACE               : 9 17 18 19 27 28 32 33 34 70 71 72
COMMA                : 17 18 19 29 63 74 77 79 79 80 80 81 82 83 84 86 87
COST                 : 13 14 15
CPAREN               : 27 28 33 34 44 55 62
DATE                 : 6
DEF                  : 27 28
DEL                  : 21 22
DESCRIP              : 17 18 19
DISMISS              : 23 24
DIV                  : 51
DPOINT               : 10 10 11 11 12 12 13 13 14 14 15 15 25 81 82 83 84 86 87
ELSE                 : 9
END                  : 2 3
EQUAL                : 39
FOREACH              : 32
FROM                 : 58 66 67 68
GEQ                  : 41
GET                  : 6 58 66 67 68
GREATER              : 42
ID                   : 5 6 10 10 11 11 11 11 12 12 13 13 14 14 14 14 15 15 16 16 17 18 19 19 20 21 22 22 23 24 24 25 27 28 29 30 32 32 39 39 40 40 41 41 42 42 43 43 45 45 46 47 48 53 58 62 66 67 68 69 77 78 80 80 82 86
IF                   : 34
IN                   : 32 45
INVESTS              : 13 14 15
LEQ                  : 40
LESS                 : 43
LOAD                 : 59
METRICS              : 6
MINUS                : 50
MULT                 : 52
NAME                 : 21 23 58 59 79 80 81 82 83 84 85 86 87
NOT                  : 36
NUMBER               : 10 10 13 13 17 54 81 84
OBR                  : 73
OBRACE               : 9 17 18 19 27 28 32 33 34 70 71 72
OPAREN               : 27 28 33 34 44 55 62
OR                   : 38
PLUS                 : 49
POINT                : 
PRICE                : 10 11 12
PRINT                : 25
SALARY               : 81 82 83
SALE                 : 10 11 12
SAVE                 : 5
STAFF                : 66
TYPE                 : 27 29 30 46 47
VOID                 : 28
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

Argument             : 62 63
Assignable           : 47 48 63 64
IfStatement          : 8 9
Instruction          : 2 3
ListInst             : 1 2 9 27 28 32 33 34
Params               : 27 28 29
Program              : 0
bool_expression      : 35 36 37 37 38 38 44
bus                  : 70
collection           : 57 79 79
collection_body      : 73 74 77
condition            : 33 34
emp                  : 71
empty                : 31 65 76
funct_call           : 26 61
instance             : 4
loop_statements      : 7
operation            : 12 12 15 15 18 49 49 50 50 51 51 52 52 55 60 83 87
prod                 : 72
subType              : 20 56 74 75

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ListInst
    (2) ListInst -> . Instruction END ListInst
    (3) ListInst -> . Instruction END
    (4) Instruction -> . instance
    (5) Instruction -> . SAVE ID
    (6) Instruction -> . ID GET METRICS DATE
    (7) Instruction -> . loop_statements
    (8) Instruction -> . IfStatement
    (9) Instruction -> . IfStatement ELSE OBRACE ListInst CBRACE
    (10) Instruction -> . ID ACTION SALE ID PRICE DPOINT NUMBER AMOUNT DPOINT NUMBER
    (11) Instruction -> . ID ACTION SALE ID PRICE DPOINT ID AMOUNT DPOINT ID
    (12) Instruction -> . ID ACTION SALE ID PRICE DPOINT operation AMOUNT DPOINT operation
    (13) Instruction -> . ID ACTION INVESTS ID COST DPOINT NUMBER AMOUNT DPOINT NUMBER
    (14) Instruction -> . ID ACTION INVESTS ID COST DPOINT ID AMOUNT DPOINT ID
    (15) Instruction -> . ID ACTION INVESTS ID COST DPOINT operation AMOUNT DPOINT operation
    (16) Instruction -> . ID ADD ID
    (17) Instruction -> . ID ADD BILL OBRACE NUMBER COMMA DESCRIP CBRACE
    (18) Instruction -> . ID ADD BILL OBRACE operation COMMA DESCRIP CBRACE
    (19) Instruction -> . ID ADD BILL OBRACE ID COMMA DESCRIP CBRACE
    (20) Instruction -> . ID ADD subType
    (21) Instruction -> . ID DEL NAME
    (22) Instruction -> . ID DEL ID
    (23) Instruction -> . ID DISMISS NAME
    (24) Instruction -> . ID DISMISS ID
    (25) Instruction -> . PRINT DPOINT ID
    (26) Instruction -> . funct_call
    (27) Instruction -> . DEF TYPE ID OPAREN Params CPAREN OBRACE ListInst CBRACE
    (28) Instruction -> . DEF VOID ID OPAREN Params CPAREN OBRACE ListInst CBRACE
    (46) instance -> . TYPE ID
    (47) instance -> . TYPE ID ASSIGN Assignable
    (48) instance -> . ID ASSIGN Assignable
    (32) loop_statements -> . FOREACH ID IN ID OBRACE ListInst CBRACE
    (33) loop_statements -> . WHILE OPAREN condition CPAREN OBRACE ListInst CBRACE
    (34) IfStatement -> . IF OPAREN condition CPAREN OBRACE ListInst CBRACE
    (62) funct_call -> . ID OPAREN Argument CPAREN
    (65) funct_call -> . empty
    (88) empty -> .

    SAVE            shift and go to state 5
    ID              shift and go to state 6
    PRINT           shift and go to state 9
    DEF             shift and go to state 11
    TYPE            shift and go to state 12
    FOREACH         shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    END             reduce using rule 88 (empty -> .)

    Program                        shift and go to state 1
    ListInst                       shift and go to state 2
    Instruction                    shift and go to state 3
    instance                       shift and go to state 4
    loop_statements                shift and go to state 7
    IfStatement                    shift and go to state 8
    funct_call                     shift and go to state 10
    empty                          shift and go to state 16

state 1

    (0) S' -> Program .



state 2

    (1) Program -> ListInst .

    $end            reduce using rule 1 (Program -> ListInst .)


state 3

    (2) ListInst -> Instruction . END ListInst
    (3) ListInst -> Instruction . END

    END             shift and go to state 17


state 4

    (4) Instruction -> instance .

    END             reduce using rule 4 (Instruction -> instance .)


state 5

    (5) Instruction -> SAVE . ID

    ID              shift and go to state 18


state 6

    (6) Instruction -> ID . GET METRICS DATE
    (10) Instruction -> ID . ACTION SALE ID PRICE DPOINT NUMBER AMOUNT DPOINT NUMBER
    (11) Instruction -> ID . ACTION SALE ID PRICE DPOINT ID AMOUNT DPOINT ID
    (12) Instruction -> ID . ACTION SALE ID PRICE DPOINT operation AMOUNT DPOINT operation
    (13) Instruction -> ID . ACTION INVESTS ID COST DPOINT NUMBER AMOUNT DPOINT NUMBER
    (14) Instruction -> ID . ACTION INVESTS ID COST DPOINT ID AMOUNT DPOINT ID
    (15) Instruction -> ID . ACTION INVESTS ID COST DPOINT operation AMOUNT DPOINT operation
    (16) Instruction -> ID . ADD ID
    (17) Instruction -> ID . ADD BILL OBRACE NUMBER COMMA DESCRIP CBRACE
    (18) Instruction -> ID . ADD BILL OBRACE operation COMMA DESCRIP CBRACE
    (19) Instruction -> ID . ADD BILL OBRACE ID COMMA DESCRIP CBRACE
    (20) Instruction -> ID . ADD subType
    (21) Instruction -> ID . DEL NAME
    (22) Instruction -> ID . DEL ID
    (23) Instruction -> ID . DISMISS NAME
    (24) Instruction -> ID . DISMISS ID
    (48) instance -> ID . ASSIGN Assignable
    (62) funct_call -> ID . OPAREN Argument CPAREN

    GET             shift and go to state 19
    ACTION          shift and go to state 20
    ADD             shift and go to state 21
    DEL             shift and go to state 22
    DISMISS         shift and go to state 23
    ASSIGN          shift and go to state 24
    OPAREN          shift and go to state 25


state 7

    (7) Instruction -> loop_statements .

    END             reduce using rule 7 (Instruction -> loop_statements .)


state 8

    (8) Instruction -> IfStatement .
    (9) Instruction -> IfStatement . ELSE OBRACE ListInst CBRACE

    END             reduce using rule 8 (Instruction -> IfStatement .)
    ELSE            shift and go to state 26


state 9

    (25) Instruction -> PRINT . DPOINT ID

    DPOINT          shift and go to state 27


state 10

    (26) Instruction -> funct_call .

    END             reduce using rule 26 (Instruction -> funct_call .)


state 11

    (27) Instruction -> DEF . TYPE ID OPAREN Params CPAREN OBRACE ListInst CBRACE
    (28) Instruction -> DEF . VOID ID OPAREN Params CPAREN OBRACE ListInst CBRACE

    TYPE            shift and go to state 28
    VOID            shift and go to state 29


state 12

    (46) instance -> TYPE . ID
    (47) instance -> TYPE . ID ASSIGN Assignable

    ID              shift and go to state 30


state 13

    (32) loop_statements -> FOREACH . ID IN ID OBRACE ListInst CBRACE

    ID              shift and go to state 31


state 14

    (33) loop_statements -> WHILE . OPAREN condition CPAREN OBRACE ListInst CBRACE

    OPAREN          shift and go to state 32


state 15

    (34) IfStatement -> IF . OPAREN condition CPAREN OBRACE ListInst CBRACE

    OPAREN          shift and go to state 33


state 16

    (65) funct_call -> empty .

    END             reduce using rule 65 (funct_call -> empty .)
    COMMA           reduce using rule 65 (funct_call -> empty .)
    CPAREN          reduce using rule 65 (funct_call -> empty .)


state 17

    (2) ListInst -> Instruction END . ListInst
    (3) ListInst -> Instruction END .
    (2) ListInst -> . Instruction END ListInst
    (3) ListInst -> . Instruction END
    (4) Instruction -> . instance
    (5) Instruction -> . SAVE ID
    (6) Instruction -> . ID GET METRICS DATE
    (7) Instruction -> . loop_statements
    (8) Instruction -> . IfStatement
    (9) Instruction -> . IfStatement ELSE OBRACE ListInst CBRACE
    (10) Instruction -> . ID ACTION SALE ID PRICE DPOINT NUMBER AMOUNT DPOINT NUMBER
    (11) Instruction -> . ID ACTION SALE ID PRICE DPOINT ID AMOUNT DPOINT ID
    (12) Instruction -> . ID ACTION SALE ID PRICE DPOINT operation AMOUNT DPOINT operation
    (13) Instruction -> . ID ACTION INVESTS ID COST DPOINT NUMBER AMOUNT DPOINT NUMBER
    (14) Instruction -> . ID ACTION INVESTS ID COST DPOINT ID AMOUNT DPOINT ID
    (15) Instruction -> . ID ACTION INVESTS ID COST DPOINT operation AMOUNT DPOINT operation
    (16) Instruction -> . ID ADD ID
    (17) Instruction -> . ID ADD BILL OBRACE NUMBER COMMA DESCRIP CBRACE
    (18) Instruction -> . ID ADD BILL OBRACE operation COMMA DESCRIP CBRACE
    (19) Instruction -> . ID ADD BILL OBRACE ID COMMA DESCRIP CBRACE
    (20) Instruction -> . ID ADD subType
    (21) Instruction -> . ID DEL NAME
    (22) Instruction -> . ID DEL ID
    (23) Instruction -> . ID DISMISS NAME
    (24) Instruction -> . ID DISMISS ID
    (25) Instruction -> . PRINT DPOINT ID
    (26) Instruction -> . funct_call
    (27) Instruction -> . DEF TYPE ID OPAREN Params CPAREN OBRACE ListInst CBRACE
    (28) Instruction -> . DEF VOID ID OPAREN Params CPAREN OBRACE ListInst CBRACE
    (46) instance -> . TYPE ID
    (47) instance -> . TYPE ID ASSIGN Assignable
    (48) instance -> . ID ASSIGN Assignable
    (32) loop_statements -> . FOREACH ID IN ID OBRACE ListInst CBRACE
    (33) loop_statements -> . WHILE OPAREN condition CPAREN OBRACE ListInst CBRACE
    (34) IfStatement -> . IF OPAREN condition CPAREN OBRACE ListInst CBRACE
    (62) funct_call -> . ID OPAREN Argument CPAREN
    (65) funct_call -> . empty
    (88) empty -> .

    $end            reduce using rule 3 (ListInst -> Instruction END .)
    CBRACE          reduce using rule 3 (ListInst -> Instruction END .)
    SAVE            shift and go to state 5
    ID              shift and go to state 6
    PRINT           shift and go to state 9
    DEF             shift and go to state 11
    TYPE            shift and go to state 12
    FOREACH         shift and go to state 13
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    END             reduce using rule 88 (empty -> .)

    Instruction                    shift and go to state 3
    ListInst                       shift and go to state 34
    instance                       shift and go to state 4
    loop_statements                shift and go to state 7
    IfStatement                    shift and go to state 8
    funct_call                     shift and go to state 10
    empty                          shift and go to state 16

state 18

    (5) Instruction -> SAVE ID .

    END             reduce using rule 5 (Instruction -> SAVE ID .)


state 19

    (6) Instruction -> ID GET . METRICS DATE

    METRICS         shift and go to state 35


state 20

    (10) Instruction -> ID ACTION . SALE ID PRICE DPOINT NUMBER AMOUNT DPOINT NUMBER
    (11) Instruction -> ID ACTION . SALE ID PRICE DPOINT ID AMOUNT DPOINT ID
    (12) Instruction -> ID ACTION . SALE ID PRICE DPOINT operation AMOUNT DPOINT operation
    (13) Instruction -> ID ACTION . INVESTS ID COST DPOINT NUMBER AMOUNT DPOINT NUMBER
    (14) Instruction -> ID ACTION . INVESTS ID COST DPOINT ID AMOUNT DPOINT ID
    (15) Instruction -> ID ACTION . INVESTS ID COST DPOINT operation AMOUNT DPOINT operation

    SALE            shift and go to state 36
    INVESTS         shift and go to state 37


state 21

    (16) Instruction -> ID ADD . ID
    (17) Instruction -> ID ADD . BILL OBRACE NUMBER COMMA DESCRIP CBRACE
    (18) Instruction -> ID ADD . BILL OBRACE operation COMMA DESCRIP CBRACE
    (19) Instruction -> ID ADD . BILL OBRACE ID COMMA DESCRIP CBRACE
    (20) Instruction -> ID ADD . subType
    (70) subType -> . OBRACE bus CBRACE
    (71) subType -> . OBRACE emp CBRACE
    (72) subType -> . OBRACE prod CBRACE

    ID              shift and go to state 38
    BILL            shift and go to state 39
    OBRACE          shift and go to state 40

    subType                        shift and go to state 41

state 22

    (21) Instruction -> ID DEL . NAME
    (22) Instruction -> ID DEL . ID

    NAME            shift and go to state 43
    ID              shift and go to state 42


state 23

    (23) Instruction -> ID DISMISS . NAME
    (24) Instruction -> ID DISMISS . ID

    NAME            shift and go to state 45
    ID              shift and go to state 44


state 24

    (48) instance -> ID ASSIGN . Assignable
    (56) Assignable -> . subType
    (57) Assignable -> . collection
    (58) Assignable -> . GET NAME FROM ID
    (59) Assignable -> . LOAD NAME
    (60) Assignable -> . operation
    (61) Assignable -> . funct_call
    (66) Assignable -> . GET STAFF FROM ID
    (67) Assignable -> . GET CATALOG FROM ID
    (68) Assignable -> . GET AMOUNT FROM ID
    (69) Assignable -> . ID
    (70) subType -> . OBRACE bus CBRACE
    (71) subType -> . OBRACE emp CBRACE
    (72) subType -> . OBRACE prod CBRACE
    (73) collection -> . OBR collection_body CBR
    (49) operation -> . operation PLUS operation
    (50) operation -> . operation MINUS operation
    (51) operation -> . operation DIV operation
    (52) operation -> . operation MULT operation
    (53) operation -> . ID
    (54) operation -> . NUMBER
    (55) operation -> . OPAREN operation CPAREN
    (62) funct_call -> . ID OPAREN Argument CPAREN
    (65) funct_call -> . empty
    (88) empty -> .

    GET             shift and go to state 50
    LOAD            shift and go to state 51
    ID              shift and go to state 46
    OBRACE          shift and go to state 40
    OBR             shift and go to state 54
    NUMBER          shift and go to state 55
    OPAREN          shift and go to state 56
    END             reduce using rule 88 (empty -> .)

    Assignable                     shift and go to state 47
    subType                        shift and go to state 48
    collection                     shift and go to state 49
    operation                      shift and go to state 52
    funct_call                     shift and go to state 53
    empty                          shift and go to state 16

state 25

    (62) funct_call -> ID OPAREN . Argument CPAREN
    (63) Argument -> . Assignable COMMA Argument
    (64) Argument -> . Assignable
    (56) Assignable -> . subType
    (57) Assignable -> . collection
    (58) Assignable -> . GET NAME FROM ID
    (59) Assignable -> . LOAD NAME
    (60) Assignable -> . operation
    (61) Assignable -> . funct_call
    (66) Assignable -> . GET STAFF FROM ID
    (67) Assignable -> . GET CATALOG FROM ID
    (68) Assignable -> . GET AMOUNT FROM ID
    (69) Assignable -> . ID
    (70) subType -> . OBRACE bus CBRACE
    (71) subType -> . OBRACE emp CBRACE
    (72) subType -> . OBRACE prod CBRACE
    (73) collection -> . OBR collection_body CBR
    (49) operation -> . operation PLUS operation
    (50) operation -> . operation MINUS operation
    (51) operation -> . operation DIV operation
    (52) operation -> . operation MULT operation
    (53) operation -> . ID
    (54) operation -> . NUMBER
    (55) operation -> . OPAREN operation CPAREN
    (62) funct_call -> . ID OPAREN Argument CPAREN
    (65) funct_call -> . empty
    (88) empty -> .

    GET             shift and go to state 50
    LOAD            shift and go to state 51
    ID              shift and go to state 46
    OBRACE          shift and go to state 40
    OBR             shift and go to state 54
    NUMBER          shift and go to state 55
    OPAREN          shift and go to state 56
    COMMA           reduce using rule 88 (empty -> .)
    CPAREN          reduce using rule 88 (empty -> .)

    Argument                       shift and go to state 57
    Assignable                     shift and go to state 58
    subType                        shift and go to state 48
    collection                     shift and go to state 49
    operation                      shift and go to state 52
    funct_call                     shift and go to state 53
    empty                          shift and go to state 16

state 26

    (9) Instruction -> IfStatement ELSE . OBRACE ListInst CBRACE

    OBRACE          shift and go to state 59


state 27

    (25) Instruction -> PRINT DPOINT . ID

    ID              shift and go to state 60


state 28

    (27) Instruction -> DEF TYPE . ID OPAREN Params CPAREN OBRACE ListInst CBRACE

    ID              shift and go to state 61


state 29

    (28) Instruction -> DEF VOID . ID OPAREN Params CPAREN OBRACE ListInst CBRACE

    ID              shift and go to state 62


state 30

    (46) instance -> TYPE ID .
    (47) instance -> TYPE ID . ASSIGN Assignable

    END             reduce using rule 46 (instance -> TYPE ID .)
    ASSIGN          shift and go to state 63


state 31

    (32) loop_statements -> FOREACH ID . IN ID OBRACE ListInst CBRACE

    IN              shift and go to state 64


state 32

    (33) loop_statements -> WHILE OPAREN . condition CPAREN OBRACE ListInst CBRACE
    (35) condition -> . bool_expression
    (36) bool_expression -> . NOT bool_expression
    (37) bool_expression -> . bool_expression AND bool_expression
    (38) bool_expression -> . bool_expression OR bool_expression
    (39) bool_expression -> . ID EQUAL ID
    (40) bool_expression -> . ID LEQ ID
    (41) bool_expression -> . ID GEQ ID
    (42) bool_expression -> . ID GREATER ID
    (43) bool_expression -> . ID LESS ID
    (44) bool_expression -> . OPAREN bool_expression CPAREN
    (45) bool_expression -> . ID IN ID

    NOT             shift and go to state 68
    ID              shift and go to state 69
    OPAREN          shift and go to state 65

    condition                      shift and go to state 66
    bool_expression                shift and go to state 67

state 33

    (34) IfStatement -> IF OPAREN . condition CPAREN OBRACE ListInst CBRACE
    (35) condition -> . bool_expression
    (36) bool_expression -> . NOT bool_expression
    (37) bool_expression -> . bool_expression AND bool_expression
    (38) bool_expression -> . bool_expression OR bool_expression
    (39) bool_expression -> . ID EQUAL ID
    (40) bool_expression -> . ID LEQ ID
    (41) bool_expression -> . ID GEQ ID
    (42) bool_expression -> . ID GREATER ID
    (43) bool_expression -> . ID LESS ID
    (44) bool_expression -> . OPAREN bool_expression CPAREN
    (45) bool_expression -> . ID IN ID

    NOT             shift and go to state 68
    ID              shift and go to state 69
    OPAREN          shift and go to state 65

    condition                      shift and go to state 70
    bool_expression                shift and go to state 67

state 34

    (2) ListInst -> Instruction END ListInst .

    $end            reduce using rule 2 (ListInst -> Instruction END ListInst .)
    CBRACE          reduce using rule 2 (ListInst -> Instruction END ListInst .)


state 35

    (6) Instruction -> ID GET METRICS . DATE

    DATE            shift and go to state 71


state 36

    (10) Instruction -> ID ACTION SALE . ID PRICE DPOINT NUMBER AMOUNT DPOINT NUMBER
    (11) Instruction -> ID ACTION SALE . ID PRICE DPOINT ID AMOUNT DPOINT ID
    (12) Instruction -> ID ACTION SALE . ID PRICE DPOINT operation AMOUNT DPOINT operation

    ID              shift and go to state 72


state 37

    (13) Instruction -> ID ACTION INVESTS . ID COST DPOINT NUMBER AMOUNT DPOINT NUMBER
    (14) Instruction -> ID ACTION INVESTS . ID COST DPOINT ID AMOUNT DPOINT ID
    (15) Instruction -> ID ACTION INVESTS . ID COST DPOINT operation AMOUNT DPOINT operation

    ID              shift and go to state 73


state 38

    (16) Instruction -> ID ADD ID .

    END             reduce using rule 16 (Instruction -> ID ADD ID .)


state 39

    (17) Instruction -> ID ADD BILL . OBRACE NUMBER COMMA DESCRIP CBRACE
    (18) Instruction -> ID ADD BILL . OBRACE operation COMMA DESCRIP CBRACE
    (19) Instruction -> ID ADD BILL . OBRACE ID COMMA DESCRIP CBRACE

    OBRACE          shift and go to state 74


state 40

    (70) subType -> OBRACE . bus CBRACE
    (71) subType -> OBRACE . emp CBRACE
    (72) subType -> OBRACE . prod CBRACE
    (79) bus -> . NAME COMMA collection COMMA collection
    (80) bus -> . NAME COMMA ID COMMA ID
    (81) emp -> . NAME COMMA SALARY DPOINT NUMBER
    (82) emp -> . NAME COMMA SALARY DPOINT ID
    (83) emp -> . NAME COMMA SALARY DPOINT operation
    (84) prod -> . NAME COMMA AMOUNT DPOINT NUMBER
    (85) prod -> . NAME
    (86) prod -> . NAME COMMA AMOUNT DPOINT ID
    (87) prod -> . NAME COMMA AMOUNT DPOINT operation

    NAME            shift and go to state 78

    bus                            shift and go to state 75
    emp                            shift and go to state 76
    prod                           shift and go to state 77

state 41

    (20) Instruction -> ID ADD subType .

    END             reduce using rule 20 (Instruction -> ID ADD subType .)


state 42

    (22) Instruction -> ID DEL ID .

    END             reduce using rule 22 (Instruction -> ID DEL ID .)


state 43

    (21) Instruction -> ID DEL NAME .

    END             reduce using rule 21 (Instruction -> ID DEL NAME .)


state 44

    (24) Instruction -> ID DISMISS ID .

    END             reduce using rule 24 (Instruction -> ID DISMISS ID .)


state 45

    (23) Instruction -> ID DISMISS NAME .

    END             reduce using rule 23 (Instruction -> ID DISMISS NAME .)


state 46

    (69) Assignable -> ID .
    (53) operation -> ID .
    (62) funct_call -> ID . OPAREN Argument CPAREN

  ! reduce/reduce conflict for END resolved using rule 53 (operation -> ID .)
  ! reduce/reduce conflict for COMMA resolved using rule 53 (operation -> ID .)
  ! reduce/reduce conflict for CPAREN resolved using rule 53 (operation -> ID .)
    PLUS            reduce using rule 53 (operation -> ID .)
    MINUS           reduce using rule 53 (operation -> ID .)
    DIV             reduce using rule 53 (operation -> ID .)
    MULT            reduce using rule 53 (operation -> ID .)
    END             reduce using rule 53 (operation -> ID .)
    COMMA           reduce using rule 53 (operation -> ID .)
    CPAREN          reduce using rule 53 (operation -> ID .)
    OPAREN          shift and go to state 25

  ! END             [ reduce using rule 69 (Assignable -> ID .) ]
  ! COMMA           [ reduce using rule 69 (Assignable -> ID .) ]
  ! CPAREN          [ reduce using rule 69 (Assignable -> ID .) ]


state 47

    (48) instance -> ID ASSIGN Assignable .

    END             reduce using rule 48 (instance -> ID ASSIGN Assignable .)


state 48

    (56) Assignable -> subType .

    END             reduce using rule 56 (Assignable -> subType .)
    COMMA           reduce using rule 56 (Assignable -> subType .)
    CPAREN          reduce using rule 56 (Assignable -> subType .)


state 49

    (57) Assignable -> collection .

    END             reduce using rule 57 (Assignable -> collection .)
    COMMA           reduce using rule 57 (Assignable -> collection .)
    CPAREN          reduce using rule 57 (Assignable -> collection .)


state 50

    (58) Assignable -> GET . NAME FROM ID
    (66) Assignable -> GET . STAFF FROM ID
    (67) Assignable -> GET . CATALOG FROM ID
    (68) Assignable -> GET . AMOUNT FROM ID

    NAME            shift and go to state 79
    STAFF           shift and go to state 80
    CATALOG         shift and go to state 81
    AMOUNT          shift and go to state 82


state 51

    (59) Assignable -> LOAD . NAME

    NAME            shift and go to state 83


state 52

    (60) Assignable -> operation .
    (49) operation -> operation . PLUS operation
    (50) operation -> operation . MINUS operation
    (51) operation -> operation . DIV operation
    (52) operation -> operation . MULT operation

    END             reduce using rule 60 (Assignable -> operation .)
    COMMA           reduce using rule 60 (Assignable -> operation .)
    CPAREN          reduce using rule 60 (Assignable -> operation .)
    PLUS            shift and go to state 84
    MINUS           shift and go to state 85
    DIV             shift and go to state 86
    MULT            shift and go to state 87


state 53

    (61) Assignable -> funct_call .

    END             reduce using rule 61 (Assignable -> funct_call .)
    COMMA           reduce using rule 61 (Assignable -> funct_call .)
    CPAREN          reduce using rule 61 (Assignable -> funct_call .)


state 54

    (73) collection -> OBR . collection_body CBR
    (74) collection_body -> . subType COMMA collection_body
    (75) collection_body -> . subType
    (76) collection_body -> . empty
    (77) collection_body -> . ID COMMA collection_body
    (78) collection_body -> . ID
    (70) subType -> . OBRACE bus CBRACE
    (71) subType -> . OBRACE emp CBRACE
    (72) subType -> . OBRACE prod CBRACE
    (88) empty -> .

    ID              shift and go to state 91
    OBRACE          shift and go to state 40
    CBR             reduce using rule 88 (empty -> .)

    collection_body                shift and go to state 88
    subType                        shift and go to state 89
    empty                          shift and go to state 90

state 55

    (54) operation -> NUMBER .

    PLUS            reduce using rule 54 (operation -> NUMBER .)
    MINUS           reduce using rule 54 (operation -> NUMBER .)
    DIV             reduce using rule 54 (operation -> NUMBER .)
    MULT            reduce using rule 54 (operation -> NUMBER .)
    END             reduce using rule 54 (operation -> NUMBER .)
    COMMA           reduce using rule 54 (operation -> NUMBER .)
    CPAREN          reduce using rule 54 (operation -> NUMBER .)
    AMOUNT          reduce using rule 54 (operation -> NUMBER .)
    CBRACE          reduce using rule 54 (operation -> NUMBER .)


state 56

    (55) operation -> OPAREN . operation CPAREN
    (49) operation -> . operation PLUS operation
    (50) operation -> . operation MINUS operation
    (51) operation -> . operation DIV operation
    (52) operation -> . operation MULT operation
    (53) operation -> . ID
    (54) operation -> . NUMBER
    (55) operation -> . OPAREN operation CPAREN

    ID              shift and go to state 93
    NUMBER          shift and go to state 55
    OPAREN          shift and go to state 56

    operation                      shift and go to state 92

state 57

    (62) funct_call -> ID OPAREN Argument . CPAREN

    CPAREN          shift and go to state 94


state 58

    (63) Argument -> Assignable . COMMA Argument
    (64) Argument -> Assignable .

    COMMA           shift and go to state 95
    CPAREN          reduce using rule 64 (Argument -> Assignable .)


state 59
